// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`username/project-name success 1`] = `
{
  "projectIdentifier": "abc/hello-world",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name success 2`] = `
{
  "projectIdentifier": "a16z/foo-bar",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name success 3`] = `
{
  "projectIdentifier": "foodoo/foo-bar",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name success 4`] = `
{
  "projectIdentifier": "u/foobar123-yo",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name success 5`] = `
{
  "projectIdentifier": "abc/hello-world",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name/toolPath success 1`] = `
{
  "projectIdentifier": "u/foo-bar",
  "toolPath": "/foo",
  "version": "latest",
}
`;

exports[`username/project-name/toolPath success 2`] = `
{
  "projectIdentifier": "a/foo-bar",
  "toolPath": "/foo_123",
  "version": "latest",
}
`;

exports[`username/project-name/toolPath success 3`] = `
{
  "projectIdentifier": "foo/foobar123-yo",
  "toolPath": "/foo_bar_BAR_901",
  "version": "latest",
}
`;

exports[`username/project-name/toolPath success 4`] = `
{
  "projectIdentifier": "foo/foobar123-yo",
  "toolPath": "/foo/bar/123/456",
  "version": "latest",
}
`;

exports[`username/project-name@deployment success 1`] = `
{
  "deploymentHash": "3d2e0fd5",
  "deploymentIdentifier": "abc/hello-world@3d2e0fd5",
  "projectIdentifier": "abc/hello-world",
  "toolPath": "/",
}
`;

exports[`username/project-name@deployment success 2`] = `
{
  "projectIdentifier": "a16z/foo-bar",
  "toolPath": "/",
  "version": "f673db32c",
}
`;

exports[`username/project-name@deployment success 3`] = `
{
  "projectIdentifier": "foodoo/foo-bar",
  "toolPath": "/",
  "version": "f673db32c",
}
`;

exports[`username/project-name@deployment success 4`] = `
{
  "deploymentHash": "673db32c",
  "deploymentIdentifier": "u/foobar123-yo@673db32c",
  "projectIdentifier": "u/foobar123-yo",
  "toolPath": "/",
}
`;

exports[`username/project-name@deployment success 5`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/",
}
`;

exports[`username/project-name@deployment/toolPath success 1`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foo-bar@01234567",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`username/project-name@deployment/toolPath success 2`] = `
{
  "deploymentHash": "abc123lz",
  "deploymentIdentifier": "username/foo-bar@abc123lz",
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
}
`;

exports[`username/project-name@deployment/toolPath success 3`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foobar123-yo@01234567",
  "projectIdentifier": "username/foobar123-yo",
  "toolPath": "/foo_bar_BAR_901",
}
`;

exports[`username/project-name@deployment/toolPath success 4`] = `
{
  "deploymentHash": "01234567",
  "deploymentIdentifier": "username/foobar@01234567",
  "projectIdentifier": "username/foobar",
  "toolPath": "/foo/bar/123/456",
}
`;

exports[`username/project-name@version success 1`] = `
{
  "projectIdentifier": "abc/hello-world",
  "toolPath": "/",
  "version": "1.0.3",
}
`;

exports[`username/project-name@version success 2`] = `
{
  "projectIdentifier": "a16z/foo-bar",
  "toolPath": "/",
  "version": "latest",
}
`;

exports[`username/project-name@version success 3`] = `
{
  "projectIdentifier": "a16z/foo-bar",
  "toolPath": "/",
  "version": "dev",
}
`;

exports[`username/project-name@version success 4`] = `
{
  "projectIdentifier": "foodoo/foo-bar",
  "toolPath": "/",
  "version": "1.0.1",
}
`;

exports[`username/project-name@version success 5`] = `
{
  "projectIdentifier": "u/foobar123-yo",
  "toolPath": "/",
  "version": "3.2.2234",
}
`;

exports[`username/project-name@version success 6`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/",
  "version": "1.0.3",
}
`;

exports[`username/project-name@version/toolPath success 1`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "latest",
}
`;

exports[`username/project-name@version/toolPath success 2`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "dev",
}
`;

exports[`username/project-name@version/toolPath success 3`] = `
{
  "projectIdentifier": "username/foo-bar",
  "toolPath": "/foo",
  "version": "1.0.0",
}
`;

exports[`username/project-name@version/toolPath success 4`] = `
{
  "projectIdentifier": "username/foobar123-yo",
  "toolPath": "/foo_bar_BAR_901",
  "version": "0.0.1",
}
`;

exports[`username/project-name@version/toolPath success 5`] = `
{
  "projectIdentifier": "username/foobar123-yo",
  "toolPath": "/foo/bar/123-456",
  "version": "0.0.1",
}
`;
